--- a/README.org
+++ b/README.org
@@ -1,3 +1,8 @@
+#+EXPORT_FILE_NAME: orderless.texi
+#+TEXINFO_DIR_CATEGORY: Emacs
+#+TEXINFO_DIR_TITLE: Orderless: (orderless).
+#+TEXINFO_DIR_DESC: Completion style for matching regexps in any order
+
 [[https://melpa.org/#/orderless][file:https://melpa.org/packages/orderless-badge.svg]]
 [[https://stable.melpa.org/#/orderless][file:https://stable.melpa.org/packages/orderless-badge.svg]]
 
